2002-12-19  Wakaba  <w@suika.fam.cx>

	* gl-jisx0208-to-katakana.tbr, gl-cjk-katakana-hw.tbr,
	jisx0208_to_katakana.tbr: New tables.
	* Makefile: Updated.

2002-12-18  Wakaba  <w@suika.fam.cx>

	* imode.tbr, lmode.tbr, jphone.tbr, doti.tbr: New tables.
	* Makefile: Updated.
	
	* ascii_yen.tbr: New table.
	* jisx0208_1997_yen.tbr: Likewise.
	* gl-jisx0208-common.tbr (ascii-yen): New mode.

2002-10-14  Nanashi-san

	* jisx0208_1978_irv.tbr, jisx0208_1983_irv.tbr: New tables.
	* JISEditions.pm: New module.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-13  Nanashi-san

	* isoiec8859_*.tbr, iso_ir_204.tbr,
	iso_ir_205.tbr, iso_ir_206.tbr: New tables.
	* Makefile: Updated.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-06  Nanashi-san

	* *gb*.tbr, iso_ir_*.tbr, kps9566_1997.tbr,
	macchinesesimp.tbr, *ks*.tbr: New tables.
	* Makefile: Updated.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-05  Nanashi-san

	* *.tbr, Makefile: New files.
	* tool/: New directory.
	(Commited by Wakaba <w@suika.fam.cx>.)

2002-10-05  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.