@@ -144,7 +144,9 @@ sub array_to_table (@%) {
       $offset += $u + $offset > 0xFF ? 0x8080 : 0x80 if $o->{right};
       $m =~ s/^#\s*//;
       push @r, sprintf qq{%s%02X\t%s\t%s\t# %s},
-        $p, $u+$offset, $l, $f, $m || charname ($l);
+        $p, $u+$offset, $l, $f,
+        #$m ||
+        charname ($l);
     } elsif (/^$/) {
     } else {
       #push @r, $_;
@@ -193,23 +195,20 @@ binmode STDOUT;
 print "#?PETBL/1.0\n";
 print join ("\n", @src)."\n";
 
-
-=head1 AUTHOR
-
-Nanashi-san
-
 =head1 LICENSE
 
-Copyright 2002 AUTHOR
+Copyright 2002 Nanashi-san.
+
+Copyright 2008 Wakaba <w@suika.fam.cx>.
 
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
-AUTHOR does NOT claim any right to the data generated by
-this script.  License of generated data fully depends
-author of source data.
+The authors do NOT claim any right to the data generated using this
+script.  License of generated data fully depends on the intention of
+the author(s) of source data used to generate them.
 
 =cut
 
-1; ## $Date: 2002/12/18 10:21:09 $
+1; ## $Date: 2008/11/08 04:25:59 $
 ### tbr2tbl.pl ends here
